fixed overflow on main and button position

--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -36,7 +36,7 @@ body {
   -moz-animation: background 30s ease infinite;
   animation: background 30s ease infinite;
   display: grid;
-  grid-gap: 30px;
+  grid-gap: 20px;
   grid-template-rows: repeat(3, min-content);
   grid-template-columns: 1fr;
   grid-template-areas:
@@ -63,13 +63,13 @@ button {
 }
 
 .inputContainer {
-  margin-top: 100px;
-  padding: 20px;
+  margin-top: 20px;
 }
 
 .input {
   display: flex;
   justify-content: center;
+  overflow: hidden;
 }
 
 form{
@@ -86,7 +86,6 @@ textarea {
   resize: none;
   color: $base-color;
 
-
   &::placeholder {
     color: $base-color;
     opacity: 0.6;
@@ -97,12 +96,12 @@ textarea {
 }
 
 .wishButton {
-  font-size: 3rem;
+  font-size: 2.5rem;
   text-align: center;
   color: $base-color;
   background-color: $accent-color;
-  padding: 20px;
-  max-width: 200px;
+  padding: 15px;
+  margin-bottom: 15px;
   border: none;
   border-radius: 25px;
   &:hover {
@@ -130,10 +129,11 @@ textarea {
 /*INTRODUCTION*/
 .introduction {
   margin: 0 auto;
+  z-index: 4;
   text-align: center;
   width: 60%;
   border: 1px solid $base-color;
-  background-color: rgba(0, 221, 255, 0.2);
+  background-color: rgba(0, 221, 255, 0.5);
   box-shadow: 10px 10px $accent-color;
   margin-top: 5%;
   padding: 10px 20px;
@@ -145,8 +145,6 @@ textarea {
 /*WISH DISPLAY*/
 ul {
   list-style: none;
-  // display: grid;
-  // grid-template-columns: repeat(5, min-content);
 }
 
 .bubblePosition {
@@ -195,7 +193,7 @@ li {
 
 
 footer {
-  min-height: 10vh;
+  min-height: 5vh;
   opacity: 0.8;
   color: $base-color;
   text-align: center;
@@ -221,12 +219,12 @@ footer {
     padding: 20px;
     border-radius: 25px;
     text-transform: uppercase;
-    // &:hover {
-    //   transform: scale(1.2);
-    //   cursor: pointer;
-    //   background: $vibrant-color
-    //     radial-gradient(circle, transparent 1%, $accent-color 1%) center/15000%;
-    // }
+    &:hover {
+      transform: scale(1.2);
+      cursor: pointer;
+      background: $vibrant-color
+        radial-gradient(circle, transparent 1%, $accent-color 1%) center/15000%;
+    }
     &:focus {
       transform: scale(1.2);
       border: 2px dashed $base-color;
